Regression - OpenCL - some shaders don't render correctly #47668

Closed
opened 2016-03-02 20:35:32 +01:00 by mathieu menuet · 12 comments

System Information
Win 7, R9 280X with Radeon Software 16.1.1

Blender Version
Broken: 2.77
Worked: 2.76b

Short description of error
Some shaders like water will not render correctly any more

Exact steps for others to reproduce the error
Open Pabelon Barcelona scene from the cycles benchmark suite with 2.76b and 2.77, switch to "GPU Benchmark" scene, hit F12, you get this:

2.76b, correct:
2.76b.jpg

2.77b not correct:
2.77 PB.jpg

Note that it's the exact same scene, the change in trees/flowers position is due to broken particle system (by the way, it would be good to remove any multithreading to make it more stable, because the new system is not coming in a foreseeable future?)

**System Information** Win 7, R9 280X with Radeon Software 16.1.1 **Blender Version** Broken: 2.77 Worked: 2.76b **Short description of error** Some shaders like water will not render correctly any more **Exact steps for others to reproduce the error** Open Pabelon Barcelona scene from the cycles benchmark suite with 2.76b and 2.77, switch to "GPU Benchmark" scene, hit F12, you get this: 2.76b, correct: ![2.76b.jpg](https://archive.blender.org/developer/F286687/2.76b.jpg) 2.77b not correct: ![2.77 PB.jpg](https://archive.blender.org/developer/F286686/2.77_PB.jpg) Note that it's the exact same scene, the change in trees/flowers position is due to broken particle system (by the way, it would be good to remove any multithreading to make it more stable, because the new system is not coming in a foreseeable future?)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli

#47710 was marked as duplicate of this issue

#47710 was marked as duplicate of this issue

#47915 was marked as duplicate of this issue

#47915 was marked as duplicate of this issue

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @Asticles

Added subscriber: @Asticles
Author

Any news on this one? The OpenCL kernel already had nearly no new features in a year, if on top of it Cycles regresses for AMD users while NVidia users continue to have new features, it will be really disappointing.

Any news on this one? The OpenCL kernel already had nearly no new features in a year, if on top of it Cycles regresses for AMD users while NVidia users continue to have new features, it will be really disappointing.

As soon as there are news you'll know. And please don't start all this disappointment discussion here. It was discussed over ML already, and main constraint here is a flackey compiler from AMD.

As soon as there are news you'll know. And please don't start all this disappointment discussion here. It was discussed over ML already, and main constraint here is a flackey compiler from AMD.

Added subscriber: @VeloFX

Added subscriber: @VeloFX

This issue was referenced by 273740006e

This issue was referenced by 273740006e19f19b702d8a0a5cfa1d5dc41eb1c8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@fd86f66e12

This issue was referenced by blender/cycles@fd86f66e1237f07fb4453f8a35fcfaea9fb5629c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47668
No description provided.